UCG/Configurations/Kubernetes/nodered-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodered
spec:
  replicas: 78
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - name: nodered
        image: dennisnotojr/nodered-loadtest:version9
        ports: 
         - containerPort: 1880
           protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.25
            memory: 256Mi
          requests:  
            cpu: 0.1
            memory: 256Mi
