UCG/Configurations/Kubernetes/nodered-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  labels:
     app: nodered
spec:
  selector:
    app: nodered
  type: LoadBalancer
  externalIPs : ["169.47.102.170", "169.47.102.171","169.47.102.172","169.47.102.173"]
  ports:
   - protocol: TCP  
     port: 1880
